@@ -1,6 +1,11 @@
 2023-09-09 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/bug-3641.c:
+	  Support pre-C23 hosts in test for bug #3641.
+
+2023-09-09 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/bug-3641.c:
 	  Regression test for bug #3641.
 
 2023-09-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
